fix transition overlap

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ p {
     opacity: 0;
     transform: scale(1,0);
     transform-origin: 0 0;
-    transition: all 150ms ease-in-out;
+    transition: none;
 }
 
 /********
